Acquired emoji font set

--- a/doho.html
+++ b/doho.html
@@ -38,7 +38,15 @@ var g = {
             window.setTimeout(g.start, 1000);
         },
         "start": function() {
+            // load a unicode font
+
             // select char
+
+            // unicode code points
+            // for Noto Colo Emoji set
+            // u1f001-u1f484
+            // web loader from
+            // fonts/NotoColorEmoji.ttf
         }
 }
     // dom
