--- a/doho.html
+++ b/doho.html
@@ -59,6 +59,9 @@ var net = {
         // transfer font file as binary blob
         // then use fetch api and parse to
         // create window uri data
+
+        // for now, web fonts
+        // and async web loader
     }
 }
     // dom
