Loop manager notes

--- a/erai.html
+++ b/erai.html
@@ -38,7 +38,13 @@ var g = {
             window.setTimeout(g.start, 1000);
         },
         "start": function() {
-            // load a unicode font
+            // loop dynamics
+            // requires a manager class
+            // triggers to handle events
+            // that can stop one loop start another
+            // as well as a data base and history
+            // to record finished loops
+            // and track queued up ones
         }
 }
 // scene
