--- a/jini.html
+++ b/jini.html
@@ -30,7 +30,7 @@ var g = {
             console.log("start akari...");
 
             // subs
-            g.subs = [dom];
+            g.subs = [dom,sce];
             g.subs.forEach(function(el){el.init();});
 
             // wait and begin
@@ -43,15 +43,36 @@ var g = {
             net.moji();
         }
     }
+// scene
+var sce = {
+    "init": function() {
+        // bkgd
+        sce.a = {};
+        sce.a.r = [1920,1080,0,0];
+        sce.a.c = dom.canvas(sce.a.r);
+        dom.add(sce.a.c);
+        // pane
+        sce.b = {};
+        sce.b.r = [512,512,734,284];
+        sce.b.c = dom.canvas(sce.b.r);
+        dom.add(sce.b.c);
+        
+    },
+    "moji": function() {
+
+    }
+}
 // xhr
 var net = {
     "moji": function() {
         window.fetch("/e")
-            .then(resp => resp.ArrayBuffer())
+            .then(resp => resp.arrayBuffer())
             .then(font => {
                 const fontFace = new FontFace('NotoEmoji-Regular', font);
                 document.fonts.add(fontFace);
                 document.body.style.fontFamily = '"NotoEmoji-Regular",Arial';
+
+                sce.moji();
             })
     }
 }
