--- a/jini.html
+++ b/jini.html
@@ -38,6 +38,9 @@ var g = {
             window.setTimeout(g.start, 1000);
         },
         "start": function() {
+            // clear
+            ren.bkgd();
+            ren.pane();
             // net pid
             // async font load
             net.moji();
@@ -56,7 +59,6 @@ var sce = {
         sce.b.r = [512,512,734,284];
         sce.b.c = dom.canvas(sce.b.r);
         dom.add(sce.b.c);
-        
     },
     "moji": function() {
 
@@ -70,10 +72,21 @@ var net = {
             .then(font => {
                 const fontFace = new FontFace('NotoEmoji-Regular', font);
                 document.fonts.add(fontFace);
-                document.body.style.fontFamily = '"NotoEmoji-Regular",Arial';
+                document.body.style.fontFamily = '"Noto Emoji", Arial';
 
                 sce.moji();
             })
+    }
+}
+// render
+var ren = {
+    "bkgd": function() {
+        sce.a.c.con.fillStyle = rgba.css([0,0,0,1.0]);
+        sce.a.c.con.fillRect(0,0,sce.a.c.can.width,sce.a.c.can.height);
+    },
+    "pane": function() {
+        sce.b.c.con.fillStyle = rgba.css([255,255,255,1.0]);
+        sce.b.c.con.fillRect(0,0,sce.b.c.can.width,sce.b.c.can.height);
     }
 }
    // dom
