--- a/jini.html
+++ b/jini.html
@@ -56,6 +56,18 @@ var g = {
             console.log("glyph name = " + net.noto.glyphs.glyphs[g.tick].name);
             console.log("glyph code point: " + net.noto.glyphs.glyphs[g.tick].unicode);
             var s0 = String.fromCharCode(net.noto.glyphs.glyphs[g.tick].unicode);
+            sce.b.t2 = s0;
+            var s2 = net.noto.glyphs.glyphs[g.tick].unicode;
+            // console.log(typeof(s2));
+            // var s3 = String.fromCodePoint(s2);
+            // console.log("\\u" + s2);
+            // var s1 = String.fromCodePoint(parseInt(net.noto.glyphs.glyphs[g.tick].unicode));
+            // sce.b.t3 = s1;
+            var s3 = "";
+            if (s2 >= 12600) {
+                s3 = String.fromCodePoint(s2);
+            }
+            console.log(s3);
             console.log(s0);
             if (g.tick >= net.noto.numGlyphs) {
                 console.log("anim done");
@@ -63,6 +75,9 @@ var g = {
             }
             // increment code point index
             // render and sample glyph
+            // begins glitch after 12953
+            // code point 1042476
+            ren.glyph();
             g.tick = g.tick + 1;
         }
     }
@@ -93,9 +108,10 @@ var net = {
         window.fetch("/e")
             .then(resp => resp.arrayBuffer())
             .then(font => {
-                const fontFace = new FontFace('NotoEmoji-Regular', font);
+                const fontFace = new FontFace("Noto Emoji", font);
                 document.fonts.add(fontFace);
-                document.body.style.fontFamily = '"Noto Emoji", Arial';
+                // document.body.style.fontFamily = '"Noto Emoji", Arial';
+                document.body.style.fontFamily = "Noto Emoji";
 
                 // opentype query
                 net.noto = opentype.parse(font);
@@ -119,6 +135,18 @@ var ren = {
         sce.b.c.con.fillStyle = rgba.css([0,0,0,1.0]);
         sce.b.c.con.font = '128px "Noto Emoji"';
         sce.b.c.con.fillText(sce.b.t, 32, 256);
+    },
+    "glyph": function() {
+        // rng bkgd
+        sce.a.c.con.fillStyle = rgba.rand();
+        sce.a.c.con.fillRect(0,0,sce.a.c.can.width,sce.a.c.can.height);
+        // rng pane
+        sce.b.c.con.fillStyle = rgba.rand();
+        sce.b.c.con.fillRect(0,0,sce.b.c.can.width,sce.b.c.can.height);
+        // rng font
+        sce.b.c.con.fillStyle = rgba.rand();
+        sce.b.c.con.font = '400px "Noto Emoji"';
+        sce.b.c.con.fillText(sce.b.t2, 16, 400);
     }
 }
    // dom
