--- a/jini.html
+++ b/jini.html
@@ -88,6 +88,7 @@ var g = {
             ren.glyph();
             // sample pixel data
             sce.buff();
+            // threshold
             g.tick = g.tick + 1;
         }
     }
