Three buffers notes

--- a/jini.html
+++ b/jini.html
@@ -152,6 +152,11 @@ var sce = {
             var i2 = (i0 + i1) >>> 0;
             // obtain pixels indicies at block
         }
+
+        // per image, three buffers
+        // pixel block data, 32x32
+        // image pixels, 1024x1024
+        // raw rgba, 1024x1024x4
     }
 }
 // pixel data
