--- a/jini.html
+++ b/jini.html
@@ -157,6 +157,16 @@ var sce = {
         // pixel block data, 32x32
         // image pixels, 1024x1024
         // raw rgba, 1024x1024x4
+    },
+    "rgba": function(i0) {
+        // pixel data
+        var r0 = [];
+        var i2 = (i0 * 4) >>> 0;
+        r0[0] = i2+0;
+        r0[1] = i2+1;
+        r0[2] = i2+2;
+        r0[3] = i2+3;
+        return r0;
     }
 }
 // pixel data
