--- a/jini.html
+++ b/jini.html
@@ -53,7 +53,7 @@ var g = {
             // slow down for threholding
             // g.id = window.setInterval(g.frame, 5000);
             // threshold debug
-            g,tick = 512;
+            g.tick = 128;
             g.id = window.setInterval(g.frame2, 2500);
         },
         "frame": function() {
@@ -103,11 +103,26 @@ var g = {
             g.tick = g.tick + 1;
         },
         "frame2": function() {
+            // glyph metadata query
+            g.meta();
+
             ren.glyph3();
+            sce.buff2();
             sce.buff3();
             sce.thresh3();
 
             window.clearInterval(g.id);
+        },
+        "meta": function() {
+            console.log("glyph # " + g.tick + " / " + net.noto.numGlyphs);
+            console.log("glyph name = " + net.noto.glyphs.glyphs[g.tick].name);
+            console.log("glyph code point: " + net.noto.glyphs.glyphs[g.tick].unicode);
+
+            var s0 = String.fromCharCode(net.noto.glyphs.glyphs[g.tick].unicode);
+            sce.b.t2 = s0;
+
+            var b0 = net.noto.glyphs.glyphs[g.tick].getBoundingBox();
+            console.log("glyph bounding box: " + b0);
         }
     }
 // scene
