Pixel color check ok

--- a/jini.html
+++ b/jini.html
@@ -205,10 +205,19 @@ var sce = {
     },
     "thresh3": function() {
         // init image buffers
-        sce.buff3();
+        // sce.buff3();
         // populate monochrome bit array
+        console.log(sce.e[g.tick].a.data);
         sce.mono();
         console.log(sce.e[g.tick].b);
+        var t0 = 0;
+        for (var i = 0; i < sce.e[g.tick].a.data.length; i++) {
+            if (sce.e[g.tick].a.data[i] == 255) {
+                t0 = t0 + 1;
+            }
+        }
+        console.log(t0);
+        // ok 3.4 / 4.1 M pixels white
         // loop over 1024 32x32 pixel blocks
         // for (var i = 0; i < 1024; i++) {
         // }
@@ -280,6 +289,9 @@ var sce = {
                 console.log(p0);
                 var t0 = sce.tally(p0);
                 console.log(t0);
+                if (t0[0] >= t0[1]) {
+                    console.log("black set");
+                }
             }
         }
     },
